Updated intro text, copyright year, added emojis and updated links

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="//fonts.googleapis.com/css?family=Cambay:400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body>
     <header class="text-center">
       <img id="me" class="img-circle" src="/me.jpg" alt="Dávid Halász" />
-      <h1>Dávid Halász</h1>
-      <h4>Student, traveller, open-source enthusiast and UI Engineer.</h4>
+      <h1 title="['daːvid 'hɒlaːs]">Dávid Halász</h1>
+      <h4 class="twemoji">
+        <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
+      </h4>
+      <h4>Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on the <a href="//manageiq.org" target="_blank">ManageIQ</a> and <a href="//patternfly.org" target="_blank">PatternFly</a> projects.</h4>
     </header>
     <div class="container">
       <hr/>
@@ -34,7 +38,7 @@
                 <a target="_blank" href="//skateman.eu"><i class="fa fa-tumblr fa-2x"></i></a>
               </div>
               <div class="col-xs-3">
-                <a target="_blank" href="//cz.linkedin.com/pub/dávid-halász/57/7a3/893"><i class="fa fa-linkedin fa-2x"></i></a>
+                <a target="_blank" href="//www.linkedin.com/in/skateman"><i class="fa fa-linkedin fa-2x"></i></a>
               </div>
             </div>
           </section>
@@ -43,7 +47,7 @@
       <hr/>
     </div>
     <footer>
-      <p class="text-center">Copyright &copy; 2015 by <strong>Dávid Halász</strong></p>
+      <p class="text-center">Copyright &copy; 2016 by <strong>Dávid Halász</strong></p>
     </footer>
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -51,5 +55,7 @@
     <![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="//twemoji.maxcdn.com/2/twemoji.min.js?2.1.2"></script>
+    <script src="app.js"></script>
   </body>
 </html>
