--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   </head>
   <body>
     <header class="text-center">
-      <img id="me" class="img-circle" src="/me.jpg" alt="Dávid Halász" />
+      <img id="me" class="img-circle" src="/me.jpg" alt="Dávid Halász" alt="If you can read this, you can read!" />
       <h1 title="['daːvid 'hɒlaːs]">Dávid Halász</h1>
       <h4 class="twemoji">
         <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
       </h4>
-      <h4>Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on the <a href="//manageiq.org" target="_blank">ManageIQ</a> and <a href="//patternfly.org" target="_blank">PatternFly</a> projects.</h4>
+      <h4>Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on the <a href="//manageiq.org" target="_blank">ManageIQ</a> and <a href="//patternfly.org" target="_blank">PatternFly</a> projects</h4>
+      <h4 class="twemoji"><span title="Loves">❤</span> to code in <a href="//www.ruby-lang.org/" target="_blank">Ruby</a>, plays the <span title="Guitar">🎸</span> and roams around the <span title="World">🌍</span></h4>
     </header>
     <div class="container">
       <hr/>
@@ -29,16 +30,16 @@
           <section id="contact">
             <div class="row text-center" id="social">
               <div class="col-xs-3">
-                <a target="_blank" href="//github.com/skateman"><i class="fa fa-github fa-2x"></i></a>
+                <a target="_blank" title="GitHub" href="//github.com/skateman"><i class="fa fa-github fa-2x"></i></a>
               </div>
               <div class="col-xs-3">
-                <a target="_blank" href="//twitter.com/halaszdavid"><i class="fa fa-twitter fa-2x"></i></a>
+                <a target="_blank" title="Twitter" href="//twitter.com/halaszdavid"><i class="fa fa-twitter fa-2x"></i></a>
               </div>
               <div class="col-xs-3">
-                <a target="_blank" href="//skateman.eu"><i class="fa fa-tumblr fa-2x"></i></a>
+                <a target="_blank" title="Tumblr" href="//skateman.tumblr.com"><i class="fa fa-tumblr fa-2x"></i></a>
               </div>
               <div class="col-xs-3">
-                <a target="_blank" href="//www.linkedin.com/in/skateman"><i class="fa fa-linkedin fa-2x"></i></a>
+                <a target="_blank" title="LinkedIn" href="//www.linkedin.com/in/skateman"><i class="fa fa-linkedin fa-2x"></i></a>
               </div>
             </div>
           </section>
