Added e-mail link+icon to the social bar

--- a/index.html
+++ b/index.html
@@ -29,17 +29,20 @@
         <div class="col-md-8 col-md-offset-2">
           <section id="contact">
             <div class="row text-center" id="social">
-              <div class="col-xs-3">
+              <div class="col-xs-2 col-xs-offset-1">
                 <a target="_blank" title="GitHub" href="//github.com/skateman"><i class="fa fa-github fa-2x"></i></a>
               </div>
-              <div class="col-xs-3">
+              <div class="col-xs-2">
                 <a target="_blank" title="Twitter" href="//twitter.com/halaszdavid"><i class="fa fa-twitter fa-2x"></i></a>
               </div>
-              <div class="col-xs-3">
+              <div class="col-xs-2">
                 <a target="_blank" title="Tumblr" href="//skateman.tumblr.com"><i class="fa fa-tumblr fa-2x"></i></a>
               </div>
-              <div class="col-xs-3">
+              <div class="col-xs-2">
                 <a target="_blank" title="LinkedIn" href="//www.linkedin.com/in/skateman"><i class="fa fa-linkedin fa-2x"></i></a>
+              </div>
+              <div class="col-xs-2">
+                <a title="E-mail" href="(╯°□°）╯︵ ┻━┻"><i class="fa fa-envelope-o fa-2x"></i></a>
               </div>
             </div>
           </section>
