Updated canonical link to www.skateman.eu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Dávid Halász</title>
-    <link rel="canonical" href="//skateman.github.io">
+    <link rel="canonical" href="//www.skateman.eu">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="//fonts.googleapis.com/css?family=Cambay:400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
