Change the name to the eastern name order
https://en.wikipedia.org/wiki/Personal_name#Eastern_name_order

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dávid Halász</title>
+    <title>Halász Dávid</title>
     <link rel="canonical" href="//www.skateman.eu">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="//fonts.googleapis.com/css?family=Cambay:400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
   <body>
     <header class="text-center">
       <img id="me" class="img-circle" src="/me.jpg" alt="Dávid Halász" alt="If you can read this, you can read!" />
-      <h1 title="['daːvid 'hɒlaːs]">Dávid Halász</h1>
+      <h1 title="['hɒlaːs 'daːvid]">Halász Dávid</h1>
       <h4 class="twemoji">
         <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
       </h4>
@@ -51,7 +51,7 @@
       <hr/>
     </div>
     <footer>
-      <p class="text-center">Copyright &copy; 2016 by <strong>Dávid Halász</strong></p>
+      <p class="text-center">Copyright &copy; 2016 by <strong>Halász Dávid</strong></p>
     </footer>
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
