Replace jQuery with vanillaJS and update dependencies

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="//www.skateman.eu">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="//fonts.googleapis.com/css?family=Cambay:400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
@@ -42,7 +42,7 @@
                 <a target="_blank" title="LinkedIn" href="//www.linkedin.com/in/skateman"><i class="fa fa-linkedin fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a title="E-mail" href="(╯°□°）╯︵ ┻━┻"><i class="fa fa-envelope-o fa-2x"></i></a>
+                <a title="E-mail" href="(╯°□°）╯︵ ┻━┻" id="e-mail"><i class="fa fa-envelope-o fa-2x"></i></a>
               </div>
             </div>
           </section>
@@ -54,12 +54,10 @@
       <p class="text-center">Copyright &copy; 2016 by <strong>Halász Dávid</strong></p>
     </footer>
     <!--[if lt IE 9]>
-      <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="//twemoji.maxcdn.com/2/twemoji.min.js?2.1.2"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script src="//twemoji.maxcdn.com/2/twemoji.min.js?11"></script>
     <script src="app.js"></script>
   </body>
 </html>
