--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h4 class="twemoji">
         <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
       </h4>
-      <h4>Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on the <a href="//manageiq.org" target="_blank">ManageIQ</a> and <a href="//patternfly.org" target="_blank">PatternFly</a> projects</h4>
+      <h4>Senior Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on the <a href="//manageiq.org" target="_blank">ManageIQ</a> and <a href="//patternfly.org" target="_blank">PatternFly</a> projects</h4>
       <h4 class="twemoji"><span title="Loves">❤</span> to code in <a href="//www.ruby-lang.org/" target="_blank">Ruby</a>, plays the <span title="Guitar">🎸</span> and roams around the <span title="World">🌍</span></h4>
     </header>
     <div class="container">
