Updated profile photo to a drawing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="text-center">
-      <img id="me" class="img-circle" src="/me.jpg" alt="Dávid Halász" alt="If you can read this, you can read!" />
+      <img id="me" src="/me-draw.png" alt="Dávid Halász" alt="If you can read this, you can read!" />
       <h1 title="['hɒlaːs 'daːvid]">Halász Dávid</h1>
       <h4 class="twemoji">
         <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
