--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <h4 class="twemoji">
         <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
       </h4>
-      <h4>Senior Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on the <a href="//manageiq.org" target="_blank">ManageIQ</a> and <a href="//patternfly.org" target="_blank">PatternFly</a> projects</h4>
-      <h4 class="twemoji"><span title="Loves">❤</span> to code in <a href="//www.ruby-lang.org/" target="_blank">Ruby</a>, plays the <span title="Guitar">🎸</span> and roams around the <span title="World">🌍</span></h4>
+      <h4>Senior Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on the <a href="//manageiq.org" target="_blank">ManageIQ</a> project</h4>
+      <h4 class="twemoji"><span title="Loves">❤</span> to code in C and <a href="//www.ruby-lang.org/" target="_blank">Ruby</a>, plays the <span title="Guitar">🎸</span> or with a <span title="3D printer">3D 🖨️</span> and roams around the <span title="World">🌍</span></h4>
     </header>
     <div class="container">
       <hr/>
@@ -29,20 +29,23 @@
         <div class="col-md-8 col-md-offset-2">
           <section id="contact">
             <div class="row text-center" id="social">
-              <div class="col-xs-2 col-xs-offset-1">
-                <a target="_blank" title="GitHub" href="//github.com/skateman"><i class="fa fa-github fa-2x"></i></a>
+              <div class="col-xs-2">
+                <a target="_blank" title="GitHub" href="//github.com/skateman" title="website"><i class="fa fa-github fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a target="_blank" title="Twitter" href="//twitter.com/halaszdavid"><i class="fa fa-twitter fa-2x"></i></a>
+                <a target="_blank" title="Twitter" href="//twitter.com/halaszdavid" title="twitter"><i class="fa fa-twitter fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a target="_blank" title="Tumblr" href="//skateman.tumblr.com"><i class="fa fa-tumblr fa-2x"></i></a>
+                <a target="_blank" title="Twitter" href="//instagram.com/infillpercentage" title="instagram"><i class="fa fa-instagram fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a target="_blank" title="LinkedIn" href="//www.linkedin.com/in/skateman"><i class="fa fa-linkedin fa-2x"></i></a>
+                <a target="_blank" title="Tumblr" href="//skateman.tumblr.com" title="tumblr"><i class="fa fa-tumblr fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a title="E-mail" href="(╯°□°）╯︵ ┻━┻" id="e-mail"><i class="fa fa-envelope-o fa-2x"></i></a>
+                <a target="_blank" title="LinkedIn" href="//www.linkedin.com/in/skateman" title="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+              </div>
+              <div class="col-xs-2">
+                <a title="E-mail" href="(╯°□°）╯︵ ┻━┻" id="e-mail" title="e-mail"><i class="fa fa-envelope-o fa-2x"></i></a>
               </div>
             </div>
           </section>
@@ -51,7 +54,8 @@
       <hr/>
     </div>
     <footer>
-      <p class="text-center">Copyright &copy; 2016 by <strong>Halász Dávid</strong></p>
+      <p class="text-center"></p>
+      <p class="text-center">Copyright &copy; 2020 by <strong>Halász Dávid</strong></p>
     </footer>
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
