Added META tag for disabling FLoC

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="//afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
   </head>
   <body>
     <header class="text-center">
