--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Halász Dávid</title>
     <link rel="canonical" href="//www.skateman.eu">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="//fonts.googleapis.com/css?family=Cambay:400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
@@ -19,9 +19,10 @@
       <img id="me" src="/me-draw.png" alt="Dávid Halász" alt="If you can read this, you can read!" />
       <h1 title="['hɒlaːs 'daːvid]">Halász Dávid</h1>
       <h4 class="twemoji">
-        <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
+        <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in the <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
       </h4>
-      <h4>Senior Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on <a href="//www.redhat.com/en/technologies/management/insights" target="_blank">Insights</a></h4>
+      <h4>Senior Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on <a href="//www.redhat.com/en/technologies/management/insights" target="_blank">Insights</a> and leading Compliance Engineering</h4>
+      <h4 class="twemoji">PhD student 🎓 at <a href="//muni.cz" target="_blank">Masaryk University</a>, member of <a href="//lasaris.fi.muni.cz" target="_blank">LaSaRIS</a></h4>
       <h4 class="twemoji"><span title="Loves">❤</span> to code in C and <a href="//www.ruby-lang.org/" target="_blank">Ruby</a>, plays the <span title="Guitar">🎸</span> or with a <span title="3D printer">3D 🖨️</span> and roams around the <span title="World">🌍</span></h4>
     </header>
     <div class="container">
@@ -56,7 +57,7 @@
     </div>
     <footer>
       <p class="text-center"></p>
-      <p class="text-center">Copyright &copy; 2021 by <strong>Halász Dávid</strong></p>
+      <p class="text-center">Copyright &copy; 2022 by <strong>Halász Dávid</strong></p>
     </footer>
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
