--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h4 class="twemoji">
         <a title="Hungarian" href="//en.wikipedia.org/wiki/Hungarians_in_Slovakia" target="_blank">🇭🇺</a> born in <a title="Slovakia" href="//en.wikipedia.org/wiki/Slovakia" target="_blank">🇸🇰</a> living in the <a title="Czech Republic" href="//en.wikipedia.org/wiki/Czech_Republic" target="_blank">🇨🇿</a> feeling <a title="European" href="//en.wikipedia.org/wiki/Pan-European_identity" target="_blank">🇪🇺</a>
       </h4>
-      <h4>Senior Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on <a href="//www.redhat.com/en/technologies/management/insights" target="_blank">Insights</a> and leading Compliance Engineering</h4>
+      <h4>Principal Software Engineer at <a href="//redhat.com" target="_blank">Red Hat</a> working on <a href="//www.redhat.com/en/technologies/management/insights" target="_blank">Insights</a> and leading Compliance Engineering</h4>
       <h4 class="twemoji">PhD student 🎓 at <a href="//muni.cz" target="_blank">Masaryk University</a>, member of <a href="//lasaris.fi.muni.cz" target="_blank">LaSaRIS</a></h4>
       <h4 class="twemoji"><span title="Loves">❤</span> to code in C and <a href="//www.ruby-lang.org/" target="_blank">Ruby</a>, plays the <span title="Guitar">🎸</span> or with a <span title="3D printer">3D 🖨️</span> and roams around the <span title="World">🌍</span></h4>
     </header>
