Updated fontawesome to its latest version

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="//www.skateman.eu">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="//fonts.googleapis.com/css?family=Cambay:400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="//afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
@@ -32,22 +32,22 @@
           <section id="contact">
             <div class="row text-center" id="social">
               <div class="col-xs-2">
-                <a target="_blank" title="GitHub" href="//github.com/skateman" title="website"><i class="fa fa-github fa-2x"></i></a>
+                <a target="_blank" title="GitHub" href="//github.com/skateman" title="website"><i class="fa-brands fa-github fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a target="_blank" title="Twitter" href="//twitter.com/halaszdavid" title="twitter"><i class="fa fa-twitter fa-2x"></i></a>
+                <a target="_blank" title="Twitter" href="//twitter.com/halaszdavid" title="twitter"><i class="fa-brands fa-twitter fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a target="_blank" title="Twitter" href="//instagram.com/infillpercentage" title="instagram"><i class="fa fa-instagram fa-2x"></i></a>
+                <a target="_blank" title="Twitter" href="//instagram.com/infillpercentage" title="instagram"><i class="fa-brands fa-instagram fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a target="_blank" title="Tumblr" href="//skateman.tumblr.com" title="tumblr"><i class="fa fa-tumblr fa-2x"></i></a>
+                <a target="_blank" title="Tumblr" href="//skateman.tumblr.com" title="tumblr"><i class="fa-brands fa-tumblr fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a target="_blank" title="LinkedIn" href="//www.linkedin.com/in/skateman" title="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
+                <a target="_blank" title="LinkedIn" href="//www.linkedin.com/in/skateman" title="linkedin"><i class="fa-brands fa-linkedin fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a title="E-mail" href="(╯°□°）╯︵ ┻━┻" id="e-mail" title="e-mail"><i class="fa fa-envelope-o fa-2x"></i></a>
+                <a title="E-mail" href="(╯°□°）╯︵ ┻━┻" id="e-mail" title="e-mail"><i class="fa-regular fa-envelope fa-2x"></i></a>
               </div>
             </div>
           </section>
@@ -57,7 +57,7 @@
     </div>
     <footer>
       <p class="text-center"></p>
-      <p class="text-center">Copyright &copy; 2022 by <strong>Halász Dávid</strong></p>
+      <p class="text-center">Copyright &copy; 2023 by <strong>Halász Dávid</strong></p>
     </footer>
     <!--[if lt IE 9]>
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
