Replaced tumblr with researchgate

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a target="_blank" title="Twitter" href="//instagram.com/infillpercentage" title="instagram"><i class="fa-brands fa-instagram fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
-                <a target="_blank" title="Tumblr" href="//skateman.tumblr.com" title="tumblr"><i class="fa-brands fa-tumblr fa-2x"></i></a>
+                <a target="_blank" title="Tumblr" href="//www.researchgate.net/profile/David-Halasz-3" title="researchgate"><i class="fa-brands fa-researchgate fa-2x"></i></a>
               </div>
               <div class="col-xs-2">
                 <a target="_blank" title="LinkedIn" href="//www.linkedin.com/in/skateman" title="linkedin"><i class="fa-brands fa-linkedin fa-2x"></i></a>
